Added new UNIX script.